	* EXP quests for Blacksmith, Merchant, Alchemist
erKURITA
	* Warps maintainment
Evera
	* Everything.
	* Dungeon Teleport System NPCs.
	* iRO information gathering.
	* Kafra maintainment.
	* Taking requests.
Musashiden
	*Scripting iRO latest towns (warps, NPCs, ect.)
	*iRO information gathering.
Playtester
	* Monsters spawn, warps maintainment

== Changelog ==

Date		Added
======
2007/03/14
	* Reduced the chance to socket enchant a C rank item to 40% [Playtester]
	- info comes from kRO monthly and jRO players
	- this is based on "better too low than too high"
2007/03/02
	* Restored history for the newly added files [ultramage]
	- use 'svn copy' damnit :)
2007/03/01
	* The Sign: Fixed possible exploit, thanks to happylight [Lupus]
	- Merged Socket Enchang, Cool Corp in Hugel
	- Removed duplicated NPC from Yuno.txt (implemented in sleipnir_seal.txt)
2007/02/28
	* Fixed 2 questions in Rasputin's test, thanks to vvCC [Lupus]
2007/02/27
	* Added alternate bonus item to Alchemist Quest, thanks to b3nn0 [Lupus]
	- Made Dancer Quest bonus item to be give as in other quests
2007/02/26
	* Merged Dancer quest from Trunk [Lupus]
	  NOTE: due to 'XXXnpctimer' function changes, 2.3 & 2.5 doesn't work on earlier builds
2007/02/23
	* Updated dancer quest to v2.3, Lupus later script fixes are still rather
	  recent as to merge them to stable.
2007/02/21
	* Updated WoE scripts since the "guardian" script command no longer has a
	  "amount" argument. [Skotlex]
	* Moved NPC Master Kavaruk (overlapped Phantasmic Arrow Skill quest NPC) [Lupus]
	- The Sign Quest, minor dialogue fix
	- Fixed JobMaster Baby -> Super Baby change bug
2007/01/31
	* Merged r9734 from trunk (custom events reorganization)
	* Merged r9714 from trunk (typo fixes)
2007/01/24
	* Fixed one missing 'On' in prtg_managers.txt [ultramage]
2007/01/21
	* Synchronization of the trunk&stable npc directories [ultramage]
	- compatibility fixes for the new (stricter) script engine