@@ -471,8 +471,8 @@ int npc_chat_sub(struct block_list *bl, va_list ap)
 
 int buildin_defpattern(struct script_state *st) {
     int setid=conv_num(st,& (st->stack->stack_data[st->start+2]));
-    char *pattern=conv_str(st,& (st->stack->stack_data[st->start+3]));
-    char *label=conv_str(st,& (st->stack->stack_data[st->start+4]));
+    const char *pattern=conv_str(st,& (st->stack->stack_data[st->start+3]));
+    const char *label=conv_str(st,& (st->stack->stack_data[st->start+4]));
     struct npc_data *nd=(struct npc_data *)map_id2bl(st->oid);
     
     npc_chat_def_pattern(nd, setid, pattern, label);
